--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,8 @@
 title: Welcome to Middleman
 ---
 
+<%= render 'views/header' %>
+
 <div class="welcome">
   <div class="logo">
     <%= image_tag "middleman-logo.svg" %>
