--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -22,6 +22,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <%= stylesheet_link_tag :site %>
+    <%= stylesheet_link_tag :header %>
     <%= javascript_include_tag :all %>
   </head>
 
