--- a/source/views/_header.html.erb
+++ b/source/views/_header.html.erb
@@ -1,1 +1,6 @@
-header
+<section id="header" class="header">
+  <nav class="navbar navbar-fixed-top navbar-custom">
+    <div class="container">
+    </div>
+  </nav>
+</section>
