--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,9 +21,9 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <%= stylesheet_link_tag :site %>
-    <%= stylesheet_link_tag :header %>
-    <%= javascript_include_tag :all %>
+    <link href="stylesheets/site.css" rel="stylesheet" />
+    <link href="stylesheets/kanamachi.css" rel="stylesheet" />
+    <script src="javascripts/all.js"></script>
   </head>
 
   <body class="<%= page_classes %>">
