--- a/docs/stylesheets/kanamachi.css
+++ b/docs/stylesheets/kanamachi.css
@@ -9,9 +9,17 @@
 .home {
   width: 100%;
   height: 700px;
-  background-image: url("images/library.jpg");
+  background-image: url("./images/library.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  z-index: 0; 
-}
+  z-index: 0; }
+  .home .top-box {
+    height: 100%;
+    display: table; }
+    .home .top-box .top-inside {
+      display: table-cell;
+      vertical-align: middle;
+      text-align: center;
+      color: #fff;
+      text-shadow: black 1px 1px 1px; }
