--- a/source/stylesheets/kanamachi.css.scss
+++ b/source/stylesheets/kanamachi.css.scss
@@ -19,4 +19,15 @@
   background-position: center center;
   background-size: cover;
   z-index: 0;
+  .top-box{
+    height: 100%;
+    display: table;
+    .top-inside{
+      display: table-cell;
+      vertical-align: middle;
+      text-align: center;
+      color: #fff;
+      text-shadow: black 1px 1px 1px;
+    }
+  }
 }
