--- a/source/stylesheets/kanamachi.css.scss
+++ b/source/stylesheets/kanamachi.css.scss
@@ -14,7 +14,7 @@
 .home{
   width: 100%;
   height: 700px;
-  background-image: url("./images/library.jpg");
+  background-image: url("../images/library.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
