--- a/source/views/_home.html.erb
+++ b/source/views/_home.html.erb
@@ -1,7 +1,7 @@
 <section id="home" class="home">
   <div class="container top-box">
     <div class="top-inside">
-      都会 × 自然を体現する最高の住宅地<br />
+      ようこそ<br />
       金町
     </div>
   </div>
