--- a/source/views/_header.html.erb
+++ b/source/views/_header.html.erb
@@ -1,12 +1,20 @@
 <section id="header" class="header">
   <nav class="navbar navbar-fixed-top navbar-custom">
     <div class="container">
-      <ul class="nav navbar-nav">
-        <li><a href="#about" class="navbar-link">金町.tokyoとは</a></li>
-        <li><a href="#pickup" class="navbar-link">テーマ別特集</a></li>
-        <li><a href="#spot" class="navbar-link">スポット一覧</a></li>
-        <li><a href="#contact" class="navbar-link">お問い合わせ</a></li>
-      </ul>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navi">
+          <span class="sr-only">メニュー</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+      </button>
+      <div id="navi" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="#about" class="navbar-link">金町.tokyoとは</a></li>
+          <li><a href="#pickup" class="navbar-link">テーマ別特集</a></li>
+          <li><a href="#spot" class="navbar-link">スポット一覧</a></li>
+          <li><a href="#contact" class="navbar-link">お問い合わせ</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
 </section>
