contact form added

--- a/source/views/_home.html.erb
+++ b/source/views/_home.html.erb
@@ -2,7 +2,7 @@
   <div class="container top-box">
     <div class="top-inside">
       ようこそ<br />
-      金町
+      金町へ
     </div>
   </div>
 </section>
