--- a/docs/stylesheets/kanamachi.css
+++ b/docs/stylesheets/kanamachi.css
@@ -1,7 +1,8 @@
 .header .navbar-custom {
   background-color: #F3C859; }
   .header .navbar-custom .navbar-link {
-    color: #fff; }
+    color: #fff;
+    letter-spacing: 0.1em; }
   .header .navbar-custom .navbar-link:hover {
     color: #767676;
     background-color: #F3C859; }
@@ -25,4 +26,13 @@
       text-align: center;
       color: #fff;
       text-shadow: 2px  2px 5px gray, -2px  2px 5px gray, 2px -2px 5px gray, -2px -2px 5px gray;
-      font-size: 40px; }
+      font-size: 40px;
+      letter-spacing: 0.2em; }
+
+.footer-bottom {
+  background-color: #f5f5f5;
+  padding: 20px 0; }
+  .footer-bottom .copyright {
+    font-size: 14px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase; }
