--- a/source/stylesheets/kanamachi.css.scss
+++ b/source/stylesheets/kanamachi.css.scss
@@ -3,6 +3,7 @@
     background-color: #F3C859;
     .navbar-link{
       color: #fff;
+      letter-spacing: 0.1em;
     }
     .navbar-link:hover{
       color: #767676;
@@ -35,6 +36,17 @@
              2px -2px 5px gray,
             -2px -2px 5px gray;
       font-size: 40px;
+      letter-spacing: 0.2em;
     }
+  }
+}
+
+.footer-bottom{
+  background-color: #f5f5f5;
+  padding: 20px 0;
+  .copyright{
+    font-size: 14px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
   }
 }
