--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,5 +6,8 @@ title: 金町.tokyo
 
 <%= partial 'views/home' %>
 
+<%= partial 'views/pickup' %>
+
+<%= partial 'views/spot' %>
 
 <%= partial 'views/footer' %>
