--- a/source/views/_pickup.html.erb
+++ b/source/views/_pickup.html.erb
@@ -1,8 +1,19 @@
 <section id="pickup" class="pickup">
   <div class="container">
-    <div class="col-sm-6">
+    <div class="col-sm-12">
       <h2 class="h-msg text-center">テーマ別特集</h2>
+    </div>
+    <div class="col-sm-3">
       <div class="content-box padding-box">
+        <div class="content-box-img">
+          <i class="fa fa-home fa-5x" aria-hidden="true"></i>
+        </div>
+        <div class="content-box-title text-center">
+          買って住む
+        </div>
+        <div class="content-box-text">
+          金町で販売中の不動産を網羅
+        </div>
       </div>
     </div>
   </div>
