--- a/docs/stylesheets/kanamachi.css
+++ b/docs/stylesheets/kanamachi.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box; }
+
 .header .navbar-custom {
   background-color: #F3C859; }
   .header .navbar-custom .navbar-link {
@@ -28,6 +31,24 @@
       text-shadow: 2px  2px 5px gray, -2px  2px 5px gray, 2px -2px 5px gray, -2px -2px 5px gray;
       font-size: 40px;
       letter-spacing: 0.2em; }
+
+.pickup .h-msg {
+  letter-spacing: 0.15em;
+  margin: 15px 0 65px;
+  font-size: 28px;
+  color: #000; }
+.pickup .content-box {
+  margin: 25px 0;
+  text-align: center; }
+  .pickup .content-box .content-box-title {
+    margin-top: 30px;
+    font-size: 18px;
+    font-weight: 700; }
+  .pickup .content-box .content-box-text {
+    margin: 15px 0 0;
+    text-align: left; }
+.pickup .padding-box {
+  padding: 25px; }
 
 .footer-bottom {
   background-color: #f5f5f5;
