--- a/docs/stylesheets/kanamachi.css
+++ b/docs/stylesheets/kanamachi.css
@@ -32,23 +32,25 @@
       font-size: 40px;
       letter-spacing: 0.2em; }
 
-.pickup .h-msg {
-  letter-spacing: 0.15em;
-  margin: 15px 0 65px;
-  font-size: 28px;
-  color: #000; }
-.pickup .content-box {
-  margin: 25px 0;
-  text-align: center; }
-  .pickup .content-box .content-box-title {
-    margin-top: 30px;
-    font-size: 18px;
-    font-weight: 700; }
-  .pickup .content-box .content-box-text {
-    margin: 15px 0 0;
-    text-align: left; }
-.pickup .padding-box {
-  padding: 25px; }
+.pickup {
+  padding: 70px; }
+  .pickup .h-msg {
+    letter-spacing: 0.15em;
+    margin: 15px 0 65px;
+    font-size: 28px;
+    color: #000; }
+  .pickup .content-box {
+    margin: 25px 0;
+    text-align: center; }
+    .pickup .content-box .content-box-title {
+      margin-top: 30px;
+      font-size: 18px;
+      font-weight: 700; }
+    .pickup .content-box .content-box-text {
+      margin: 15px 0 0;
+      text-align: left; }
+  .pickup .padding-box {
+    padding: 25px; }
 
 .footer-bottom {
   background-color: #f5f5f5;
