--- a/docs/stylesheets/kanamachi.css
+++ b/docs/stylesheets/kanamachi.css
@@ -33,6 +33,7 @@
       letter-spacing: 0.2em; }
 
 .pickup {
+  background-color: #f5f5f5;
   padding: 70px; }
   .pickup .h-msg {
     letter-spacing: 0.15em;
@@ -51,6 +52,14 @@
       text-align: left; }
   .pickup .padding-box {
     padding: 25px; }
+
+.spot {
+  padding: 70px; }
+  .spot .h-msg {
+    letter-spacing: 0.15em;
+    margin: 15px 0 65px;
+    font-size: 28px;
+    color: #000; }
 
 .footer-bottom {
   background-color: #f5f5f5;
