--- a/source/views/_spot.html.erb
+++ b/source/views/_spot.html.erb
@@ -1,2 +1,7 @@
 <section id="spot" class="spot">
+  <div class="container">
+    <div class="col-sm-12">
+      <h2 class="h-msg text-center">スポット一覧</h2>
+    </div>
+  </div>
 </section>
