footer added to about

--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -5,4 +5,4 @@ title: 金町.tokyoとは
 <%= partial '../views/header' %>
 <%= partial '../views/about_header' %>
 
-<%= partial 'views/footer' %>
+<%= partial '../views/footer' %>
