--- a/source/views/_home_header.html.erb
+++ b/source/views/_home_header.html.erb
@@ -1,4 +1,5 @@
         <ul class="nav navbar-nav">
+          <li><a href="./" class="navbar-link">HOME</a></li>
           <li><a href="./about/" class="navbar-link">金町.tokyoとは</a></li>
           <li><a href="#pickup" class="navbar-link">テーマ別特集</a></li>
           <li><a href="#spot" class="navbar-link">スポット一覧</a></li>
