--- a/source/layouts/about.erb
+++ b/source/layouts/about.erb
@@ -7,6 +7,7 @@
 
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "Middleman" %></title>
+    <meta name=”Description” content=”保育園事情、住宅情報、子育て情報、イベント情報、レストラン、スイーツ、公園、図書館、教習所等の情報が揃う金町の総合情報サイトです。” />
 
     <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
     	
