--- a/docs/stylesheets/kanamachi.css
+++ b/docs/stylesheets/kanamachi.css
@@ -68,3 +68,13 @@
     font-size: 14px;
     letter-spacing: 0.1em;
     text-transform: uppercase; }
+
+.about {
+  padding: 50px 0; }
+  .about .about-title {
+    font-size: 30px;
+    margin-bottom: 40px; }
+  .about .about-summary {
+    font-size: 20px;
+    letter-spacing: 0.1em;
+    color: #5f5f5f; }
