--- a/source/stylesheets/kanamachi.css.scss
+++ b/source/stylesheets/kanamachi.css.scss
@@ -91,3 +91,16 @@
     text-transform: uppercase;
   }
 }
+
+.about{
+  padding: 50px 0;
+  .about-title{
+    font-size: 30px;
+    margin-bottom: 40px;
+  }
+  .about-summary{
+    font-size: 20px;
+    letter-spacing: 0.1em;
+    color: #5f5f5f;
+  }
+}
