--- a/docs/stylesheets/kanamachi.css
+++ b/docs/stylesheets/kanamachi.css
@@ -77,4 +77,14 @@
   .about .about-summary {
     font-size: 20px;
     letter-spacing: 0.1em;
-    color: #5f5f5f; }
+    color: #5f5f5f;
+    line-height: 40px; }
+  .about .ability-title {
+    padding: 20px 10px;
+    background-color: #f5f5f5;
+    margin: 30px 0;
+    font-size: 20px;
+    letter-spacing: 0.1em; }
+  .about .list-group-item {
+    letter-spacing: 0.1em;
+    line-height: 30px; }
