--- a/source/stylesheets/kanamachi.css.scss
+++ b/source/stylesheets/kanamachi.css.scss
@@ -102,5 +102,17 @@
     font-size: 20px;
     letter-spacing: 0.1em;
     color: #5f5f5f;
+    line-height: 40px;
+  }
+  .ability-title{
+    padding: 20px 10px;
+    background-color: #f5f5f5;
+    margin: 30px 0;
+    font-size: 20px;
+    letter-spacing: 0.1em;
+  }
+  .list-group-item{
+    letter-spacing: 0.1em;
+    line-height: 30px;
   }
 }
