--- a/source/views/_about_content.html.erb
+++ b/source/views/_about_content.html.erb
@@ -10,9 +10,15 @@
         金町.tokyoができること
       </div>
       <ul class="list-group">
+        <li class="list-group-item">金町.tokyoへの掲載</li>
+        <li class="list-group-item">金町.tokyoトップページへの掲載</li>
         <li class="list-group-item">WEBサイト制作</li>
-        <li class="list-group-item">Twitterでの宣伝</li>
+        <li class="list-group-item">WEB/SNS上での宣伝</li>
       </ul>
+      <div class="contact-button text-center">
+        <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScvt0z_QpvG-pgLrVr8nyeY09GySS5HCVBdM3QOMZ8FgksVKg/viewform">
+          <button type="button" class="btn btn-info">お問い合わせ</button>
+        </a>
       </div>
     </div>
   </div>
