--- a/docs/stylesheets/kanamachi.css
+++ b/docs/stylesheets/kanamachi.css
@@ -70,7 +70,7 @@
     text-transform: uppercase; }
 
 .about {
-  padding: 50px 0; }
+  padding-top: 50px; }
   .about .about-title {
     font-size: 30px;
     margin-bottom: 40px; }
@@ -88,3 +88,8 @@
   .about .list-group-item {
     letter-spacing: 0.1em;
     line-height: 30px; }
+  .about .contact-button {
+    padding: 50px; }
+    .about .contact-button .btn {
+      font-size: 25px;
+      padding: 12px 24px; }
