--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,6 +7,8 @@ title: 金町.tokyo
 
 <%= partial 'views/home' %>
 
+<%= partial 'views/news' %>
+
 <%= partial 'views/pickup' %>
 
 <%= partial 'views/spot' %>
