--- a/source/stylesheets/kanamachi.css.scss
+++ b/source/stylesheets/kanamachi.css.scss
@@ -123,3 +123,17 @@
     }
   }
 }
+
+.news{
+  padding: 70px;
+  .h-msg{
+    letter-spacing: 0.15em;
+    margin: 15px 0 65px;
+    font-size: 28px;
+    color: #000;
+  }
+  .tweet-box{
+    width: 50%;
+    margin: auto;
+  }
+}
