--- a/source/views/_news.html.erb
+++ b/source/views/_news.html.erb
@@ -3,7 +3,7 @@
     <div class="col-sm-12">
       <h2 class="h-msg text-center">新着情報</h2>
     </div>
-    <div class="col-md-6">
+    <div class="tweet-box">
       <a class="twitter-timeline" data-width="400" data-height="700" href="https://twitter.com/DrKanamachi">Tweets by DrKanamachi</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
   </div>
