--- a/source/stylesheets/kanamachi.css.scss
+++ b/source/stylesheets/kanamachi.css.scss
@@ -45,8 +45,23 @@
   }
 }
 
-.pickup{
+.news{
   background-color: #f5f5f5;
+  padding: 70px;
+  .h-msg{
+    letter-spacing: 0.15em;
+    margin: 15px 0 65px;
+    font-size: 28px;
+    color: #000;
+  }
+  .tweet-box{
+    max-width: 401px;
+    margin: auto;
+  }
+}
+
+.pickup{
+  background-color: #fff;
   padding: 70px;
   .h-msg{
     letter-spacing: 0.15em;
@@ -69,16 +84,6 @@
   }
   .padding-box{
     padding: 25px;
-  }
-}
-
-.spot{
-  padding: 70px;
-  .h-msg{
-    letter-spacing: 0.15em;
-    margin: 15px 0 65px;
-    font-size: 28px;
-    color: #000;
   }
 }
 
@@ -124,16 +129,4 @@
   }
 }
 
-.news{
-  padding: 70px;
-  .h-msg{
-    letter-spacing: 0.15em;
-    margin: 15px 0 65px;
-    font-size: 28px;
-    color: #000;
-  }
-  .tweet-box{
-    max-width: 401px;
-    margin: auto;
-  }
-}
+
