--- a/source/views/_pickup.html.erb
+++ b/source/views/_pickup.html.erb
@@ -5,15 +5,17 @@
     </div>
     <div class="col-sm-3">
       <div class="content-box padding-box">
-        <div class="content-box-img">
-          <i class="fa fa-home fa-5x" aria-hidden="true"></i>
-        </div>
-        <div class="content-box-title text-center">
-          買って住む
-        </div>
-        <div class="content-box-text">
-          金町で販売中の不動産を網羅
-        </div>
+        <a href="./ramen" class="pickup-link">
+          <div class="content-box-img">
+            <i class="fa fa-star fa-5x" aria-hidden="true"></i>
+          </div>
+          <div class="content-box-title text-center">
+            ラーメン
+          </div>
+          <div class="content-box-text">
+           本当に美味しい金町のラーメン屋 
+          </div>
+        </a>
       </div>
     </div>
     <div class="col-sm-3">
