ramen map added

--- a/source/ramen/index.html.erb
+++ b/source/ramen/index.html.erb
@@ -1,3 +1,7 @@
 ---
 title: 金町で本当に美味しいラーメン 
 ---
+<%= partial '../views/header' %>
+<%= partial '../views/other_header' %>
+<%= partial '../views/ramen_content' %>
+<%= partial '../views/footer' %>
