--- a/docs/stylesheets/kanamachi.css
+++ b/docs/stylesheets/kanamachi.css
@@ -103,3 +103,28 @@
     .about .contact-button .btn {
       font-size: 25px;
       padding: 12px 24px; }
+
+.others {
+  padding-top: 100px; }
+  .others .others-title {
+    font-size: 30px;
+    margin-bottom: 40px; }
+  .others .others-summary {
+    font-size: 20px;
+    letter-spacing: 0.1em;
+    color: #5f5f5f;
+    line-height: 40px; }
+  .others .ability-title {
+    padding: 20px 10px;
+    background-color: #f5f5f5;
+    margin: 30px 0;
+    font-size: 20px;
+    letter-spacing: 0.1em; }
+  .others .list-group-item {
+    letter-spacing: 0.1em;
+    line-height: 30px; }
+  .others .contact-button {
+    padding: 50px; }
+    .others .contact-button .btn {
+      font-size: 25px;
+      padding: 12px 24px; }
