--- a/source/stylesheets/kanamachi.css.scss
+++ b/source/stylesheets/kanamachi.css.scss
@@ -137,4 +137,36 @@
   }
 }
 
+.others{
+  padding-top: 100px;
+  .others-title{
+    font-size: 30px;
+    margin-bottom: 40px;
+  }
+  .others-summary{
+    font-size: 20px;
+    letter-spacing: 0.1em;
+    color: #5f5f5f;
+    line-height: 40px;
+  }
+  .ability-title{
+    padding: 20px 10px;
+    background-color: #f5f5f5;
+    margin: 30px 0;
+    font-size: 20px;
+    letter-spacing: 0.1em;
+  }
+  .list-group-item{
+    letter-spacing: 0.1em;
+    line-height: 30px;
+  }
+  .contact-button{
+    padding: 50px;
+    .btn{
+      font-size: 25px;
+      padding: 12px 24px;
+    }
+  }
+}
+
 
