--- a/docs/stylesheets/kanamachi.css
+++ b/docs/stylesheets/kanamachi.css
@@ -114,17 +114,13 @@
     letter-spacing: 0.1em;
     color: #5f5f5f;
     line-height: 40px; }
-  .others .ability-title {
+  .others .maps-title {
     padding: 20px 10px;
     background-color: #f5f5f5;
     margin: 30px 0;
     font-size: 20px;
     letter-spacing: 0.1em; }
-  .others .list-group-item {
-    letter-spacing: 0.1em;
-    line-height: 30px; }
-  .others .contact-button {
-    padding: 50px; }
-    .others .contact-button .btn {
-      font-size: 25px;
-      padding: 12px 24px; }
+  .others .maps {
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 50px; }
