--- a/source/stylesheets/kanamachi.css.scss
+++ b/source/stylesheets/kanamachi.css.scss
@@ -149,23 +149,17 @@
     color: #5f5f5f;
     line-height: 40px;
   }
-  .ability-title{
+  .maps-title{
     padding: 20px 10px;
     background-color: #f5f5f5;
     margin: 30px 0;
     font-size: 20px;
     letter-spacing: 0.1em;
   }
-  .list-group-item{
-    letter-spacing: 0.1em;
-    line-height: 30px;
-  }
-  .contact-button{
-    padding: 50px;
-    .btn{
-      font-size: 25px;
-      padding: 12px 24px;
-    }
+  .maps{
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 50px;
   }
 }
 
