--- a/docs/stylesheets/kanamachi.css
+++ b/docs/stylesheets/kanamachi.css
@@ -29,8 +29,9 @@
       text-align: center;
       color: #fff;
       text-shadow: 2px  2px 5px gray, -2px  2px 5px gray, 2px -2px 5px gray, -2px -2px 5px gray;
-      font-size: 40px;
-      letter-spacing: 0.2em; }
+      font-size: 50px;
+      letter-spacing: 0.2em;
+      line-height: 60px; }
 
 .news {
   background-color: #f5f5f5;
@@ -122,5 +123,5 @@
     letter-spacing: 0.1em; }
   .others .maps {
     text-align: center;
-    padding-top: 30px;
+    padding-top: 20px;
     padding-bottom: 50px; }
