--- a/source/stylesheets/kanamachi.css.scss
+++ b/source/stylesheets/kanamachi.css.scss
@@ -39,8 +39,9 @@
             -2px  2px 5px gray,
              2px -2px 5px gray,
             -2px -2px 5px gray;
-      font-size: 40px;
+      font-size: 50px;
       letter-spacing: 0.2em;
+      line-height: 60px;
     }
   }
 }
@@ -158,7 +159,7 @@
   }
   .maps{
     text-align: center;
-    padding-top: 30px;
+    padding-top: 20px;
     padding-bottom: 50px;
   }
 }
