--- a/source/views/_pickup.html.erb
+++ b/source/views/_pickup.html.erb
@@ -7,7 +7,7 @@
       <div class="content-box padding-box">
         <a href="./ramen" class="pickup-link">
           <div class="content-box-img">
-            <i class="fa fa-star fa-5x" aria-hidden="true"></i>
+            <i class="fa fa-cutlery fa-5x" aria-hidden="true"></i>
           </div>
           <div class="content-box-title text-center">
             ラーメン
@@ -20,15 +20,17 @@
     </div>
     <div class="col-sm-3">
       <div class="content-box padding-box">
-        <div class="content-box-img">
-          <i class="fa fa-home fa-5x" aria-hidden="true"></i>
-        </div>
-        <div class="content-box-title text-center">
-          買って住む
-        </div>
-        <div class="content-box-text">
-          金町で販売中の不動産を網羅
-        </div>
+        <a href="./park" class="pickup-link">
+          <div class="content-box-img">
+            <i class="fa fa-futbol-o fa-5x" aria-hidden="true"></i>
+          </div>
+          <div class="content-box-title text-center">
+            遊ぶ
+          </div>
+          <div class="content-box-text">
+            金町で遊べるオススメの公園
+          </div>
+        </a>
       </div>
     </div>
     <div class="col-sm-3">
