bank icon updated

--- a/source/views/_pickup.html.erb
+++ b/source/views/_pickup.html.erb
@@ -37,7 +37,7 @@
       <div class="content-box padding-box">
         <a href="./bank" class="pickup-link">
           <div class="content-box-img">
-            <i class="fa fa-home fa-5x" aria-hidden="true"></i>
+            <i class="fa fa-university fa-5x" aria-hidden="true"></i>
           </div>
           <div class="content-box-title text-center">
             お金
