--- a/source/views/_pickup.html.erb
+++ b/source/views/_pickup.html.erb
@@ -50,15 +50,17 @@
     </div>
     <div class="col-sm-3">
       <div class="content-box padding-box">
-        <div class="content-box-img">
-          <i class="fa fa-home fa-5x" aria-hidden="true"></i>
-        </div>
-        <div class="content-box-title text-center">
-          買って住む
-        </div>
-        <div class="content-box-text">
-          金町で販売中の不動産を網羅
-        </div>
+        <a href="./homes" class="pickup-link">
+          <div class="content-box-img">
+            <i class="fa fa-home fa-5x" aria-hidden="true"></i>
+          </div>
+          <div class="content-box-title text-center">
+            買って住む
+          </div>
+          <div class="content-box-text">
+            金町で販売予定の新築/中古物件情報
+          </div>
+        </a>
       </div>
     </div>
   </div>
