--- a/docs/stylesheets/kanamachi.css
+++ b/docs/stylesheets/kanamachi.css
@@ -115,7 +115,7 @@
     letter-spacing: 0.1em;
     color: #5f5f5f;
     line-height: 40px; }
-  .others .maps-title {
+  .others .content-title {
     padding: 20px 10px;
     background-color: #f5f5f5;
     margin: 30px 0;
@@ -125,3 +125,11 @@
     text-align: center;
     padding-top: 20px;
     padding-bottom: 50px; }
+  .others .content {
+    padding-top: 20px;
+    padding-bottom: 50px; }
+  .others .catch {
+    padding-left: 10px;
+    margin-bottom: 50px;
+    font-size: 20px;
+    letter-spacing: 0.1em; }
