--- a/source/views/_homes_content.html.erb
+++ b/source/views/_homes_content.html.erb
@@ -5,10 +5,31 @@
       <div class="others-summary">
         東京都葛飾区金町周辺の新築、中古物件を紹介。随時更新。 
       </div>
-      <div class="maps-title">
+      <div class="content-title">
         新着物件MAP
       </div>
       <div class="maps">
+      </div>
+      <div class="content-title">
+        シティタワー金町
+      </div>
+      <div class="content">
+        <p class="catch">
+          公園・大学・住宅・商業が一体化した大規模複合開発
+        </p>
+        <table class="table">
+          <thead>
+            <tr><th><b>物件概要</b></th><th></th></tr>
+          </thead>
+          <tbody>
+            <tr><td>物件名</td><td>シティタワー金町</td></tr>
+            <tr><td>販売価格</td><td>3,690万円～6,990万円</td></tr>
+            <tr><td>所在地</td><td>東京都葛飾区　新宿六丁目2400－18（地番）</td></tr>
+            <tr><td>総戸数</td><td>840戸（タワー棟 700戸、レジデンス棟 140戸）</td></tr>
+            <tr><td>敷地面積</td><td>17,659.92m2</td></tr>
+            <tr><td>構造</td><td>鉄筋コンクリート造</td></tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
