city tower info updated

--- a/source/views/_homes_content.html.erb
+++ b/source/views/_homes_content.html.erb
@@ -23,11 +23,15 @@
           </thead>
           <tbody>
             <tr><td>物件名</td><td>シティタワー金町</td></tr>
+            <tr><td>アクセス</td><td>JR常磐線金町駅より徒歩12分</td></tr>
             <tr><td>販売価格</td><td>3,690万円～6,990万円</td></tr>
             <tr><td>所在地</td><td>東京都葛飾区　新宿六丁目2400－18（地番）</td></tr>
             <tr><td>総戸数</td><td>840戸（タワー棟 700戸、レジデンス棟 140戸）</td></tr>
             <tr><td>敷地面積</td><td>17,659.92m2</td></tr>
             <tr><td>構造</td><td>鉄筋コンクリート造</td></tr>
+            <tr><td>販売会社</td><td>住友不動産株式会社</td></tr>
+            <tr><td>設計</td><td>株式会社竹中工務店</td></tr>
+            <tr><td>施行</td><td>株式会社竹中工務店</td></tr>
           </tbody>
         </table>
       </div>
