--- a/docs/stylesheets/kanamachi.css
+++ b/docs/stylesheets/kanamachi.css
@@ -133,3 +133,5 @@
     margin-bottom: 50px;
     font-size: 20px;
     letter-spacing: 0.1em; }
+  .others .content-photo {
+    margin-bottom: 50px; }
