--- a/source/stylesheets/kanamachi.css.scss
+++ b/source/stylesheets/kanamachi.css.scss
@@ -171,6 +171,7 @@
     margin-bottom: 50px;
     font-size: 20px;
     letter-spacing: 0.1em;
+    line-height: 28px;
   }
   .content-photo{
     margin-bottom: 50px;
