--- a/docs/stylesheets/kanamachi.css
+++ b/docs/stylesheets/kanamachi.css
@@ -132,6 +132,7 @@
     padding-left: 10px;
     margin-bottom: 50px;
     font-size: 20px;
-    letter-spacing: 0.1em; }
+    letter-spacing: 0.1em;
+    line-height: 28px; }
   .others .content-photo {
     margin-bottom: 50px; }
