--- a/source/views/_bank_content.html.erb
+++ b/source/views/_bank_content.html.erb
@@ -9,7 +9,7 @@
         銀行MAP
       </div>
       <div class="maps">
-        <iframe src="https://www.google.com/maps/d/embed?mid=1VA6kCX7s3uUCjAbayscpLq1UD-E&hl=ja" width="640" height="480"></iframe>
+        <iframe src="https://www.google.com/maps/d/embed?mid=1VA6kCX7s3uUCjAbayscpLq1UD-E&hl=ja" width="100%" height="480"></iframe>
       </div>
     </div>
   </div>
