--- a/source/stylesheets/kanamachi.css.scss
+++ b/source/stylesheets/kanamachi.css.scss
@@ -161,6 +161,8 @@
     text-align: center;
     padding-top: 20px;
     padding-bottom: 50px;
+    width: 640px;
+    margin: 0 auto;
   }
   .content{
     padding-top: 20px;
@@ -173,9 +175,20 @@
     letter-spacing: 0.1em;
     line-height: 28px;
   }
+  .photos{
+    width: 640px;
+    margin: 0 auto;
+  }
   .content-photo{
     margin-bottom: 50px;
+    border-radius: 80px;
+  }
+  @media only screen and (max-width: 760px){
+    .maps{
+      width: 100%;
+    }
+    .photos{
+      width: 80%;
+    }
   }
 }
-
-
