--- a/source/views/_park_content.html.erb
+++ b/source/views/_park_content.html.erb
@@ -9,7 +9,7 @@
         公園MAP
       </div>
       <div class="maps">
-        <iframe src="https://www.google.com/maps/d/embed?mid=1q2m2H4YzJGh-tOmJGZ-AUTrdC5M&hl=ja" width="640" height="480"></iframe>
+        <iframe src="https://www.google.com/maps/d/embed?mid=1q2m2H4YzJGh-tOmJGZ-AUTrdC5M&hl=ja" width="100%" height="480"></iframe>
       </div>
     </div>
   </div>
