--- a/source/views/_homes_content.html.erb
+++ b/source/views/_homes_content.html.erb
@@ -32,7 +32,7 @@
             <tr><td>アクセス</td><td>JR常磐線金町駅より徒歩12分</td></tr>
             <tr><td>販売価格</td><td>3,690万円～6,990万円</td></tr>
             <tr><td>完成時期</td><td>タワー棟 平成28年2月22日、レジデンス棟 平成27年3月3日</td></tr>
-            <tr><td>所在地</td><td>東京都葛飾区　新宿六丁目2400－18（地番）</td></tr>
+            <tr><td>所在地</td><td><a href="https://goo.gl/maps/qWbSufeZkHp" target="_blank">東京都葛飾区　新宿六丁目2400－18（地番）</a></td></tr>
             <tr><td>総戸数</td><td>840戸（タワー棟 700戸、レジデンス棟 140戸）</td></tr>
             <tr><td>敷地面積</td><td>17,659.92m2</td></tr>
             <tr><td>構造</td><td>鉄筋コンクリート造</td></tr>
