--- a/source/views/_homes_content.html.erb
+++ b/source/views/_homes_content.html.erb
@@ -49,7 +49,7 @@
       </div>
       <div class="content">
         <p class="catch">
-          金町駅南口前、駅とヴィナシスの間に地上２１階建てのマンションの建設がなされる。<br />
+          金町駅南口前、駅とヴィナシスの間に地上21階建てのマンションの建設がなされる。<br />
           2017年12月より工事着手の予定で、既にこのエリアの商業店舗は一部閉店セールも行っている。<br />
         </p>
         <table class="table">
@@ -63,12 +63,41 @@
             <tr><td>完成時期</td><td>2020年3月予定</td></tr>
             <tr><td>総戸数</td><td>約180戸</td></tr>
             <tr><td>敷地面積</td><td>0.4ha</td></tr>
-            <tr><td>構造</td><td>鉄筋コンクリート造</td></tr>
+            <tr><td>構造</td><td>未定</td></tr>
             <tr><td>販売会社</td><td>野村不動産株式会社</td></tr>
             <tr><td>設計</td><td>佐藤総合計画</td></tr>
             <tr><td>施行</td><td>戸田建設</td></tr>
             <tr><td>URL</td><td>未定</td></tr>
             <tr><td>WEB記事</td><td><a target="_blank" href="http://www.kensetsunews.com/?p=68849">建設通信新聞</a></td></tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="content-title">
+        東金町一丁目西地区再開発
+      </div>
+      <div class="content">
+        <p class="catch">
+          現在イトーヨーカドー、及びその駐車場になっているエリアに地上37階建てのマンションの建設がなされる。<br />
+          2020年12月より工事着手、2026年の完成を予定している。<br />
+          あわせて駅の北口が新設される可能性もあるため駅西側の住民は気になるところだ。
+        </p>
+        <table class="table">
+          <thead>
+            <tr><th><b>物件概要</b></th><th></th></tr>
+          </thead>
+          <tbody>
+            <tr><td>物件名</td><td>未定</td></tr>
+            <tr><td>アクセス</td><td>未定</td></tr>
+            <tr><td>販売価格</td><td>未定</td></tr>
+            <tr><td>完成時期</td><td>2026年予定</td></tr>
+            <tr><td>総戸数</td><td>約450戸</td></tr>
+            <tr><td>敷地面積</td><td>3ha</td></tr>
+            <tr><td>構造</td><td>未定</td></tr>
+            <tr><td>販売会社</td><td>未定</td></tr>
+            <tr><td>設計</td><td>未定</td></tr>
+            <tr><td>施行</td><td>未定</td></tr>
+            <tr><td>URL</td><td>未定</td></tr>
+            <tr><td>WEB記事</td><td><a target="_blank" href="http://www.kensetsunews.com/?p=68653">建設通信新聞</a></td></tr>
           </tbody>
         </table>
       </div>
