homes photo size update

--- a/source/views/_homes_content.html.erb
+++ b/source/views/_homes_content.html.erb
@@ -22,7 +22,9 @@
           ただし、駅は少し遠い。また、電車の音も窓を開けているときは気になる。<br />
           あとは、ベランダが外から丸見えなのは少し残念。
         </p>
-        <img src="../images/citytower.jpg" class="content-photo img-responsive">
+        <div class="photos">
+          <img src="../images/citytower.jpg" class="content-photo img-responsive">
+        </div>
         <table class="table">
           <thead>
             <tr><th><b>物件概要</b></th><th></th></tr>
